# CommentManagerPlugin

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
doc/: basic_design.md  detailed_design.md  requirements.md  unit_test_specification.md
src/: comment_manager_plugin.cpp  comment_manager_plugin.h  comment_manager_widget.cpp  comment_manager_widget.h  config_manager.cpp  config_manager.h  database_manager.cpp  database_manager.h
tests/: CMakeLists.txt  test_comment_manager.cpp
